// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search : TAGS Result: display <SearchResult/> component when Tags list found 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  position: relative;
}

.css-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid undefined;
  padding: 1.5rem 1rem 1rem 1rem;
}

.css-2 .avatar {
  margin-right: 1em;
  margin-bottom: 1em;
}

.css-2 .tweet-info {
  width: 100%;
}

.css-2 .tweet-info-user {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-2 .tweet-info-user span.username {
  font-weight: 500;
}

.css-2 .tweet-info-user span.secondary {
  padding-left: 0.5rem;
}

.css-2 .tweet-body {
  margin-bottom: 0.75rem;
  word-break: break-word;
}

.css-2 .tags {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-2 div.tweet-stats {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-2 div.tweet-stats .controls {
  margin-right: 4rem;
}

.css-2 div.tweet-stats svg {
  margin-right: 0.5rem;
}

.css-2 div.tweet-stats span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-2 div.tweet-stats span.comment svg {
  position: relative;
  top: 4px;
}

@media screen and (max-width: 470px) {
  .css-2 div.tweet-stats div {
    margin-right: 1.5rem;
  }

  .css-2 div.tweet-stats .controls {
    margin-right: 1.5rem;
  }
}

@media screen and (max-width: 430px) {
  .css-2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .css-2 .username {
    display: none;
  }

  .css-2 .avatar {
    display: none;
  }

  .css-2 .tweet-info-user span.secondary {
    padding-left: 0;
    padding-right: 0.5rem;
  }
}

.css-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #bdbdbd;
}

.css-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.css-5 {
  margin-right: 8px;
  margin-bottom: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(25, 118, 210, 0.5);
  color: #1976d2;
}

.css-6::-moz-focus-inner {
  border-style: none;
}

.css-6.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .css-6 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.css-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(25, 118, 210, 0.04);
  border: 1px solid #1976d2;
}

@media (hover: none) {
  .css-6:hover {
    background-color: transparent;
  }
}

.css-6.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.css-7 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.css-7>*:nth-of-type(1) {
  font-size: 20px;
}

.css-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  line-height: 1.2;
}

.css-9 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.css-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 4em;
}

.css-11 .emoji-mart {
  position: absolute;
  z-index: 1;
}

.css-11 .emoji-mart-bar.emoji-mart-bar,
.css-11 .emoji-mart-scroll.emoji-mart-scroll {
  margin-right: 0;
}

.css-11 .emoji-mart .emoji-mart-anchor-bar {
  background-color: undefined!important;
}

.css-11 .emoji-mart-preview {
  display: none;
}

.css-11 .emoji-mart-category {
  margin-top: 0.75rem;
}

.css-11 .emoji-mart-dark .emoji-mart-category-label span {
  color: #fff;
}

.css-11 .emoji-mart-scroll::WebkitScrollbar {
  width: 0.25rem;
}

.css-11 .emoji-pick {
  cursor: pointer;
}

@media screen and (max-width: 430px) {
  .css-11 .emoji-mart {
    position: fixed;
    bottom: 5em;
  }
}

.css-12 {
  width: 18px;
  height: 18px;
  opacity: 1;
  cursor: pointer;
}

.css-12:hover {
  fill: #e0245e;
}

.css-14 {
  color: #657786;
  position: relative;
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class="active"
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <a
          href="/shy-cloud-4965"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault avatar css-3"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4"
              data-testid="PersonIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
        </a>
        <div
          class="tweet-info"
        >
          <div
            class="tweet-info-user"
          >
            <a
              href="/shy-cloud-4965"
            >
              <span
                class="username"
              >
                shy-cloud-4965
              </span>
              <span
                class="secondary"
              >
                @shy-cloud-4965
              </span>
            </a>
              
            <a
              class="secondary"
              href="/shy-cloud-4965/status/cl084xdy815761s0n5omoxoem0"
            >
              a few seconds ago
            </a>
          </div>
          <p
            class="tweet-body"
          >
            testing after changes in input converted to ts
          </p>
          <div
            class="MuiBox-root css-5"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-6"
              data-mui-internal-clone-element="true"
              style="border-width: 1px; padding: 4px 10px; min-width: auto; margin-right: 8px; color: rgb(101, 119, 134); border-color: #3f51b5; line-height: 1.2;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-7"
              >
                <span
                  aria-label="👍, +1, thumbsup"
                  class="emoji-mart-emoji"
                >
                  <span
                    style="width: 16px; height: 16px; display: inline-block; background-image: url(https://unpkg.com/emoji-datasource-apple@5.0.1/img/apple/sheets-256/64.png); background-size: 5700% 5700%; background-position: 23.214285714285715% 67.85714285714286%;"
                  />
                </span>
              </span>
              <p
                class="MuiTypography-root MuiTypography-body1 css-8"
              >
                1
              </p>
              <span
                class="MuiTouchRipple-root css-9"
              />
            </button>
          </div>
          <div
            class="tweet-stats"
          >
            <div
              class="css-10"
            >
              <div
                class="css-11"
              >
                <span
                  class="emoji-pick"
                >
                  <svg
                    fill="#637584"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.6 2.4V0H14.4V2.4H12V3.6H14.4V6H15.6V3.6H18V2.4H15.6ZM5.09999 9H3.59999V10.5H5.09999V9ZM8.69998 9H10.2V10.5H8.69998V9ZM7.02895 13.8H6.77113C6.29273 13.8015 5.82489 13.6594 5.42823 13.3919C5.03156 13.1245 4.72436 12.7441 4.54641 12.3H3.25378L3.42861 12.737C3.69384 13.4064 4.15461 13.9803 4.75084 14.384C5.34708 14.7877 6.05111 15.0023 6.77113 15H7.02895C7.74897 15.0023 8.45299 14.7877 9.04922 14.384C9.64544 13.9803 10.1062 13.4064 10.3714 12.737L10.5463 12.3H9.25363C9.07569 12.7441 8.76849 13.1245 8.37183 13.3919C7.97517 13.6594 7.50734 13.8015 7.02895 13.8ZM0 11.1C0 7.29533 3.09532 4.2 6.9 4.2C10.7047 4.2 13.8 7.29533 13.8 11.1C13.8 14.9047 10.7047 18 6.9 18C3.09532 18 0 14.9047 0 11.1ZM1.2 11.1C1.2 14.243 3.75701 16.8 6.9 16.8C10.043 16.8 12.6 14.243 12.6 11.1C12.6 7.95702 10.043 5.4 6.9 5.4C3.75701 5.4 1.2 7.95702 1.2 11.1Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="controls"
            >
              <span
                class="comment"
              >
                <a
                  href="/shy-cloud-4965/status/cl084xdy815761s0n5omoxoem0"
                >
                  <svg
                    class="css-12"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"
                      />
                    </g>
                  </svg>
                  1
                </a>
              </span>
            </div>
            <div
              class="controls"
            >
              <span>
                <svg
                  class="css-12"
                  loading=""
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M23.77 15.67c-.292-.293-.767-.293-1.06 0l-2.22 2.22V7.65c0-2.068-1.683-3.75-3.75-3.75h-5.85c-.414 0-.75.336-.75.75s.336.75.75.75h5.85c1.24 0 2.25 1.01 2.25 2.25v10.24l-2.22-2.22c-.293-.293-.768-.293-1.06 0s-.294.768 0 1.06l3.5 3.5c.145.147.337.22.53.22s.383-.072.53-.22l3.5-3.5c.294-.292.294-.767 0-1.06zm-10.66 3.28H7.26c-1.24 0-2.25-1.01-2.25-2.25V6.46l2.22 2.22c.148.147.34.22.532.22s.384-.073.53-.22c.293-.293.293-.768 0-1.06l-3.5-3.5c-.293-.294-.768-.294-1.06 0l-3.5 3.5c-.294.292-.294.767 0 1.06s.767.293 1.06 0l2.22-2.22V16.7c0 2.068 1.683 3.75 3.75 3.75h5.85c.414 0 .75-.336.75-.75s-.337-.75-.75-.75z"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <span
              class="css-14"
            >
              <svg
                class="css-12"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.9518 9.4744C21.3776 11.353 21.2062 13.3184 20.4618 15.0941L19.0322 14.266L19.2216 19.6957L24 17.1456L22.4603 16.254C24.8616 10.9233 22.8883 4.53067 17.7369 1.54514C16.0006 0.537631 14.0315 0.00488574 12.026 3.34445e-05C10.0206 -0.00481885 8.04895 0.518405 6.30774 1.51749L7.44592 3.51822C9.11194 2.56211 11.0345 2.1543 12.9435 2.35205C14.8523 2.54984 16.6515 3.34326 18.088 4.62082C19.5244 5.89835 20.526 7.59577 20.9518 9.4744ZM3.04944 13.5656C2.62366 11.6875 2.79431 9.72245 3.53821 7.94702L4.96777 8.77518L4.77844 3.34543L0 5.8956L1.54077 6.78598C-0.860474 12.1166 1.11292 18.5093 6.26416 21.4949C8.00049 22.5024 9.9696 23.0351 11.9751 23.04C13.9806 23.0448 15.9523 22.5216 17.6934 21.5225L16.5553 19.5218C14.8893 20.4779 12.9666 20.8857 11.0577 20.6879C9.1488 20.4902 7.34961 19.6967 5.91321 18.4192C4.47668 17.1417 3.47522 15.4442 3.04944 13.5656ZM12.176 8.75968C11.2129 8.75968 10.1024 8.88932 10.1024 9.6485C10.1024 10.3847 11.1198 10.6636 12.3204 10.9928C14.0487 11.4667 16.157 12.0447 16.157 14.2408C16.157 15.2958 15.62 16.8884 12.6204 17.1478L12.9166 19.222H10.9353L11.2318 17.1667C9.78711 17.0923 8.58423 16.7777 7.99109 16.4258L8.30627 14.0739C8.9353 14.6669 10.1578 15.2403 11.787 15.2403C12.991 15.2403 13.6755 14.9817 13.6755 14.2589C13.6755 13.4128 12.5487 13.0673 11.2856 12.68C9.67517 12.1861 7.84326 11.6244 7.84326 9.8707C7.84326 8.62998 8.67676 7.14872 11.2318 6.90836L10.9353 4.77872H12.9166L12.6204 6.90836C13.8427 6.98188 15.0459 7.3338 15.5646 7.63034L15.3613 9.72284C14.3242 9.18512 13.0837 8.75968 12.176 8.75968Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TAGS Result: display <SearchResult/> component when Tags loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-2 {
  display: inline-block;
  color: #1976d2;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.css-3 {
  display: block;
}

.css-4 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class="active"
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="MuiBox-root css-1"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-2"
        role="progressbar"
        style="width: 30px; height: 30px;"
      >
        <svg
          class="MuiCircularProgress-svg css-3"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-4"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TAGS Result: display <SearchResult/> component when Tags not found 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  position: relative;
}

.css-2 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-2 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class="active"
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <p>
          No tweets found for that tag, try a different search
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TAGS Result: display <SearchResult/> component when Tags undefined 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-1 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class="active"
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <p>
        Use the search bar to find tags, people and tweets
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TWEETS Result: display <SearchResult/> component when Tweets loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-2 {
  display: inline-block;
  color: #1976d2;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.css-3 {
  display: block;
}

.css-4 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class="active"
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="MuiBox-root css-1"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-2"
        role="progressbar"
        style="width: 30px; height: 30px;"
      >
        <svg
          class="MuiCircularProgress-svg css-3"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-4"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TWEETS Result: display <SearchResult/> component when Tweets not found 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  position: relative;
}

.css-2 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-2 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class="active"
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <p>
          No tweets found, try a different search
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TWEETS Result: display <SearchResult/> component when Tweets undefined 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-1 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class="active"
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <p>
        Use the search bar to find tags, people and tweets
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : TWEETS Result: display <SearchResult/> component when tweets list found 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  position: relative;
}

.css-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom: 1px solid undefined;
  padding: 1.5rem 1rem 1rem 1rem;
}

.css-2 .avatar {
  margin-right: 1em;
  margin-bottom: 1em;
}

.css-2 .tweet-info {
  width: 100%;
}

.css-2 .tweet-info-user {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-2 .tweet-info-user span.username {
  font-weight: 500;
}

.css-2 .tweet-info-user span.secondary {
  padding-left: 0.5rem;
}

.css-2 .tweet-body {
  margin-bottom: 0.75rem;
  word-break: break-word;
}

.css-2 .tags {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-2 div.tweet-stats {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-2 div.tweet-stats .controls {
  margin-right: 4rem;
}

.css-2 div.tweet-stats svg {
  margin-right: 0.5rem;
}

.css-2 div.tweet-stats span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-2 div.tweet-stats span.comment svg {
  position: relative;
  top: 4px;
}

@media screen and (max-width: 470px) {
  .css-2 div.tweet-stats div {
    margin-right: 1.5rem;
  }

  .css-2 div.tweet-stats .controls {
    margin-right: 1.5rem;
  }
}

@media screen and (max-width: 430px) {
  .css-2 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .css-2 .username {
    display: none;
  }

  .css-2 .avatar {
    display: none;
  }

  .css-2 .tweet-info-user span.secondary {
    padding-left: 0;
    padding-right: 0.5rem;
  }
}

.css-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #bdbdbd;
}

.css-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.css-5 {
  margin-right: 8px;
  margin-bottom: 12px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.css-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(25, 118, 210, 0.5);
  color: #1976d2;
}

.css-6::-moz-focus-inner {
  border-style: none;
}

.css-6.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .css-6 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.css-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(25, 118, 210, 0.04);
  border: 1px solid #1976d2;
}

@media (hover: none) {
  .css-6:hover {
    background-color: transparent;
  }
}

.css-6.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.css-7 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.css-7>*:nth-of-type(1) {
  font-size: 20px;
}

.css-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  line-height: 1.2;
}

.css-9 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.css-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 4em;
}

.css-11 .emoji-mart {
  position: absolute;
  z-index: 1;
}

.css-11 .emoji-mart-bar.emoji-mart-bar,
.css-11 .emoji-mart-scroll.emoji-mart-scroll {
  margin-right: 0;
}

.css-11 .emoji-mart .emoji-mart-anchor-bar {
  background-color: undefined!important;
}

.css-11 .emoji-mart-preview {
  display: none;
}

.css-11 .emoji-mart-category {
  margin-top: 0.75rem;
}

.css-11 .emoji-mart-dark .emoji-mart-category-label span {
  color: #fff;
}

.css-11 .emoji-mart-scroll::WebkitScrollbar {
  width: 0.25rem;
}

.css-11 .emoji-pick {
  cursor: pointer;
}

@media screen and (max-width: 430px) {
  .css-11 .emoji-mart {
    position: fixed;
    bottom: 5em;
  }
}

.css-12 {
  width: 18px;
  height: 18px;
  opacity: 1;
  cursor: pointer;
}

.css-12:hover {
  fill: #e0245e;
}

.css-14 {
  color: #657786;
  position: relative;
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class="active"
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class=""
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <a
          href="/shy-cloud-4965"
        >
          <div
            class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault avatar css-3"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4"
              data-testid="PersonIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
          </div>
        </a>
        <div
          class="tweet-info"
        >
          <div
            class="tweet-info-user"
          >
            <a
              href="/shy-cloud-4965"
            >
              <span
                class="username"
              >
                shy-cloud-4965
              </span>
              <span
                class="secondary"
              >
                @shy-cloud-4965
              </span>
            </a>
              
            <a
              class="secondary"
              href="/shy-cloud-4965/status/cl084xdy815761s0n5omoxoem0"
            >
              a few seconds ago
            </a>
          </div>
          <p
            class="tweet-body"
          >
            testing after changes in input converted to ts
          </p>
          <div
            class="MuiBox-root css-5"
          >
            <button
              class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  css-6"
              data-mui-internal-clone-element="true"
              style="border-width: 1px; padding: 4px 10px; min-width: auto; margin-right: 8px; color: rgb(101, 119, 134); border-color: #3f51b5; line-height: 1.2;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium css-7"
              >
                <span
                  aria-label="👍, +1, thumbsup"
                  class="emoji-mart-emoji"
                >
                  <span
                    style="width: 16px; height: 16px; display: inline-block; background-image: url(https://unpkg.com/emoji-datasource-apple@5.0.1/img/apple/sheets-256/64.png); background-size: 5700% 5700%; background-position: 23.214285714285715% 67.85714285714286%;"
                  />
                </span>
              </span>
              <p
                class="MuiTypography-root MuiTypography-body1 css-8"
              >
                1
              </p>
              <span
                class="MuiTouchRipple-root css-9"
              />
            </button>
          </div>
          <div
            class="tweet-stats"
          >
            <div
              class="css-10"
            >
              <div
                class="css-11"
              >
                <span
                  class="emoji-pick"
                >
                  <svg
                    fill="#637584"
                    height="18"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.6 2.4V0H14.4V2.4H12V3.6H14.4V6H15.6V3.6H18V2.4H15.6ZM5.09999 9H3.59999V10.5H5.09999V9ZM8.69998 9H10.2V10.5H8.69998V9ZM7.02895 13.8H6.77113C6.29273 13.8015 5.82489 13.6594 5.42823 13.3919C5.03156 13.1245 4.72436 12.7441 4.54641 12.3H3.25378L3.42861 12.737C3.69384 13.4064 4.15461 13.9803 4.75084 14.384C5.34708 14.7877 6.05111 15.0023 6.77113 15H7.02895C7.74897 15.0023 8.45299 14.7877 9.04922 14.384C9.64544 13.9803 10.1062 13.4064 10.3714 12.737L10.5463 12.3H9.25363C9.07569 12.7441 8.76849 13.1245 8.37183 13.3919C7.97517 13.6594 7.50734 13.8015 7.02895 13.8ZM0 11.1C0 7.29533 3.09532 4.2 6.9 4.2C10.7047 4.2 13.8 7.29533 13.8 11.1C13.8 14.9047 10.7047 18 6.9 18C3.09532 18 0 14.9047 0 11.1ZM1.2 11.1C1.2 14.243 3.75701 16.8 6.9 16.8C10.043 16.8 12.6 14.243 12.6 11.1C12.6 7.95702 10.043 5.4 6.9 5.4C3.75701 5.4 1.2 7.95702 1.2 11.1Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="controls"
            >
              <span
                class="comment"
              >
                <a
                  href="/shy-cloud-4965/status/cl084xdy815761s0n5omoxoem0"
                >
                  <svg
                    class="css-12"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.044.286.12.403.142.225.384.347.632.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.367-3.43-7.787-7.8-7.788zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.335-.75-.75-.75h-.396c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"
                      />
                    </g>
                  </svg>
                  1
                </a>
              </span>
            </div>
            <div
              class="controls"
            >
              <span>
                <svg
                  class="css-12"
                  loading=""
                  viewBox="0 0 24 24"
                >
                  <g>
                    <path
                      d="M23.77 15.67c-.292-.293-.767-.293-1.06 0l-2.22 2.22V7.65c0-2.068-1.683-3.75-3.75-3.75h-5.85c-.414 0-.75.336-.75.75s.336.75.75.75h5.85c1.24 0 2.25 1.01 2.25 2.25v10.24l-2.22-2.22c-.293-.293-.768-.293-1.06 0s-.294.768 0 1.06l3.5 3.5c.145.147.337.22.53.22s.383-.072.53-.22l3.5-3.5c.294-.292.294-.767 0-1.06zm-10.66 3.28H7.26c-1.24 0-2.25-1.01-2.25-2.25V6.46l2.22 2.22c.148.147.34.22.532.22s.384-.073.53-.22c.293-.293.293-.768 0-1.06l-3.5-3.5c-.293-.294-.768-.294-1.06 0l-3.5 3.5c-.294.292-.294.767 0 1.06s.767.293 1.06 0l2.22-2.22V16.7c0 2.068 1.683 3.75 3.75 3.75h5.85c.414 0 .75-.336.75-.75s-.337-.75-.75-.75z"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <span
              class="css-14"
            >
              <svg
                class="css-12"
                viewBox="0 0 24 24"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.9518 9.4744C21.3776 11.353 21.2062 13.3184 20.4618 15.0941L19.0322 14.266L19.2216 19.6957L24 17.1456L22.4603 16.254C24.8616 10.9233 22.8883 4.53067 17.7369 1.54514C16.0006 0.537631 14.0315 0.00488574 12.026 3.34445e-05C10.0206 -0.00481885 8.04895 0.518405 6.30774 1.51749L7.44592 3.51822C9.11194 2.56211 11.0345 2.1543 12.9435 2.35205C14.8523 2.54984 16.6515 3.34326 18.088 4.62082C19.5244 5.89835 20.526 7.59577 20.9518 9.4744ZM3.04944 13.5656C2.62366 11.6875 2.79431 9.72245 3.53821 7.94702L4.96777 8.77518L4.77844 3.34543L0 5.8956L1.54077 6.78598C-0.860474 12.1166 1.11292 18.5093 6.26416 21.4949C8.00049 22.5024 9.9696 23.0351 11.9751 23.04C13.9806 23.0448 15.9523 22.5216 17.6934 21.5225L16.5553 19.5218C14.8893 20.4779 12.9666 20.8857 11.0577 20.6879C9.1488 20.4902 7.34961 19.6967 5.91321 18.4192C4.47668 17.1417 3.47522 15.4442 3.04944 13.5656ZM12.176 8.75968C11.2129 8.75968 10.1024 8.88932 10.1024 9.6485C10.1024 10.3847 11.1198 10.6636 12.3204 10.9928C14.0487 11.4667 16.157 12.0447 16.157 14.2408C16.157 15.2958 15.62 16.8884 12.6204 17.1478L12.9166 19.222H10.9353L11.2318 17.1667C9.78711 17.0923 8.58423 16.7777 7.99109 16.4258L8.30627 14.0739C8.9353 14.6669 10.1578 15.2403 11.787 15.2403C12.991 15.2403 13.6755 14.9817 13.6755 14.2589C13.6755 13.4128 12.5487 13.0673 11.2856 12.68C9.67517 12.1861 7.84326 11.6244 7.84326 9.8707C7.84326 8.62998 8.67676 7.14872 11.2318 6.90836L10.9353 4.77872H12.9166L12.6204 6.90836C13.8427 6.98188 15.0459 7.3338 15.5646 7.63034L15.3613 9.72284C14.3242 9.18512 13.0837 8.75968 12.176 8.75968Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : Users Result: display <SearchResult/> component when users loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.css-2 {
  display: inline-block;
  color: #1976d2;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.css-3 {
  display: block;
}

.css-4 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class="active"
      >
        Users
      </span>
    </div>
    <div
      class="MuiBox-root css-1"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-2"
        role="progressbar"
        style="width: 30px; height: 30px;"
      >
        <svg
          class="MuiCircularProgress-svg css-3"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-4"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : Users Result: display <SearchResult/> component when users not found 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  padding-top: 0.4rem;
}

.css-2 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-2 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class="active"
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="css-2"
      >
        <p>
          No user found, try a different search
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : Users Result: display <SearchResult/> component when users undefined 1`] = `
<DocumentFragment>
  .css-0 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-0 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-0 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  height: 70vh;
  font-size: 1.1rem;
  text-align: justify;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 4rem;
}

@media screen and (max-width: 530px) {
  .css-1 {
    font-size: 1rem;
  }
}

<div
    class="css-0"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class="active"
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <p>
        Use the search bar to find tags, people and tweets
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Search : Users Result: display <SearchResult/> component when userss list found 1`] = `
<DocumentFragment>
  .css-5 .tabs {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  border-bottom: 2px solid undefined;
}

.css-5 span {
  cursor: pointer;
  margin-bottom: 0.4rem;
}

.css-5 span.active {
  border-bottom: 2px solid undefined;
  font-weight: 500;
}

.css-1 {
  padding-top: 0.4rem;
}

.css-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-bottom: 3em;
}

.css-3 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 83.333333%;
  -ms-flex-preferred-size: 83.333333%;
  flex-basis: 83.333333%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 83.333333%;
}

@media (min-width:600px) {
  .css-3 {
    -webkit-flex-basis: 83.333333%;
    -ms-flex-preferred-size: 83.333333%;
    flex-basis: 83.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 83.333333%;
  }
}

@media (min-width:900px) {
  .css-3 {
    -webkit-flex-basis: 83.333333%;
    -ms-flex-preferred-size: 83.333333%;
    flex-basis: 83.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 83.333333%;
  }
}

@media (min-width:1200px) {
  .css-3 {
    -webkit-flex-basis: 83.333333%;
    -ms-flex-preferred-size: 83.333333%;
    flex-basis: 83.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 83.333333%;
  }
}

@media (min-width:1536px) {
  .css-3 {
    -webkit-flex-basis: 83.333333%;
    -ms-flex-preferred-size: 83.333333%;
    flex-basis: 83.333333%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 83.333333%;
  }
}

.css-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-6 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: #fff;
  background-color: #bdbdbd;
  width: 30px;
  height: 30px;
}

.css-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  width: 75%;
  height: 75%;
}

.css-8 {
  margin-left: 16px;
}

.css-9 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  width: 10em;
}

.css-10 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #657786;
  width: 10em;
}

.css-11 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 16.666667%;
  -ms-flex-preferred-size: 16.666667%;
  flex-basis: 16.666667%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 16.666667%;
}

@media (min-width:600px) {
  .css-11 {
    -webkit-flex-basis: 16.666667%;
    -ms-flex-preferred-size: 16.666667%;
    flex-basis: 16.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 16.666667%;
  }
}

@media (min-width:900px) {
  .css-11 {
    -webkit-flex-basis: 16.666667%;
    -ms-flex-preferred-size: 16.666667%;
    flex-basis: 16.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 16.666667%;
  }
}

@media (min-width:1200px) {
  .css-11 {
    -webkit-flex-basis: 16.666667%;
    -ms-flex-preferred-size: 16.666667%;
    flex-basis: 16.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 16.666667%;
  }
}

@media (min-width:1536px) {
  .css-11 {
    -webkit-flex-basis: 16.666667%;
    -ms-flex-preferred-size: 16.666667%;
    flex-basis: 16.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 16.666667%;
  }
}

.css-12 {
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.css-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  margin-right: -12px;
}

.css-13::-moz-focus-inner {
  border-style: none;
}

.css-13.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .css-13 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.css-13:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .css-13:hover {
    background-color: transparent;
  }
}

.css-13.Mui-disabled {
  background-color: transparent;
  color: rgba(0, 0, 0, 0.26);
}

.css-14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.css-15 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

<div
    class="css-5"
  >
    <div
      class="tabs"
    >
      <span
        class=""
      >
        Tweets
      </span>
      <span
        class=""
      >
        Tags
      </span>
      <span
        class="active"
      >
        Users
      </span>
    </div>
    <div
      class="css-1"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-2"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-10 css-3"
        >
          <div
            class="MuiBox-root css-4"
          >
            <div
              class="MuiBox-root css-5"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-6"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiAvatar-fallback css-7"
                  data-testid="PersonIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="MuiBox-root css-8"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-9"
              >
                shy-cloud-4965
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-10"
              >
                @shy-cloud-4965
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2 css-11"
        >
          <div
            class="MuiBox-root css-12"
          >
            <button
              aria-label="delete"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-13"
              tabindex="0"
              type="button"
            >
              <a
                href="/settings/profile"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-14"
                  data-testid="AccountBoxIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 5v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2H5c-1.11 0-2 .9-2 2zm12 4c0 1.66-1.34 3-3 3s-3-1.34-3-3 1.34-3 3-3 3 1.34 3 3zm-9 8c0-2 4-3.1 6-3.1s6 1.1 6 3.1v1H6v-1z"
                  />
                </svg>
              </a>
              <span
                class="MuiTouchRipple-root css-15"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
